# Novel2YAML-Script

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REVIEW_SUGGESTIONS.md  SKILL.md  novel_to_screenplay_mvp_v3.md  pyproject.toml
.claude/skills/novel-to-screenplay-mvp/: SKILL.md
apps/api/: pyproject.toml
apps/api/src/api/: __init__.py  app.py  deps.py  errors.py  models.py  store.py
apps/api/src/api/routes/: __init__.py  jobs.py  projects.py  screenplays.py
apps/api/src/api/static/: app.js  index.html  styles.css
apps/api/tests/: conftest.py  test_generate_api.py  test_generate_failure_api.py  test_import_api.py  test_projects_api.py  test_retry_api.py  test_scene_regenerate_api.py  test_static_app.py
docs/: API.md  AUTHOR_EDITING_GUIDE.md  MVP_PLAN.md  SCHEMA_DESIGN.md  SECURITY.md  TEST_CASES.md
tests/: test_smoke.py
