[project]
name = "api"
version = "0.1.0"
description = "FastAPI application for the novel-to-screenplay MVP"
requires-python = ">=3.12"
dependencies = [
    "shared-types",
]

[tool.uv.sources]
shared-types = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
